Templatizing JVM_EXTRA_ARGS